# tantivy-cpp-lib

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
src/: README.md  lib.rs  main.cpp  main.rs  treemap_mem.rs
