[package]
name = "tantivy-cpp-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
tantivy = "0.19.0"
simple-error = "0.1.9"
strum = "0.24"
strum_macros = "0.24"
roaring = "0.10.1"
log = "0.4.17"
simple-logging = "2.0.2"

[build-dependencies]
cxx-build = "1.0"
